fix: changes acording to rules 3.1-3.3 in html-and-css.md and 1.1,2.1 in html-and-css-extended.md
fix: change incorrect class .aaa to the top page on the tag header

Also change class .aaa in the file style.css, add class header tag element header

refactor: change the order of selectors in styles

fix: added MAIN tag in which the main content is wrapped

Also chaned class centered-main-page-element on the style.css on the class main-wrapper

fix: change tag button, add class element for button and modifiers

Added modifiers add, remove, edit according to BEM
Change selectors in the style.css
Changed app.js file, added class changes for button tags according to modifiers

fix: added sections tags to improve the structure of the HTML code in the main block

fix: changed in the new-task section puts label inside h3 tag

Tag section must have a heading element according to validator html w3c
Changed style.css for h3 tag selector and clear style extra properties of the tag h3
property list-style.

fix: change class name to the wrapper input element and button to new-task-wrapper

Change class name input element html file and edit style in the style.css
Complete new-task section

fix: add class to the tags h3 and list tags according to BEM

Changes ids new-task, incompleteTask, completed-task to the new_task, incomplete and completed in the html and app.js for normal functioning script.
Change ul tag in the style.css to the class task-list__tasks and id for completed

fix: changes all lists and nested elements, changes selectors in style.css acording BEM and app.js

1. Added a general class task (and for edit, class with modifier task_edit-mode) for nested LI tags in list elements.
2. Nested elements in LI tag, add classes (for checkbox, input, label) according BEM and rule 2.1 in html-and-css-extended.md
3. Changed the names of the selectors in the style.css file in accordance with the html, and also merged the properties,
   cleared the selector classes from repetition

--- a/style.css
+++ b/style.css
@@ -5,59 +5,12 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-
-.aaa img {
-  width: 100%;
-}
-
-.aaa .more_inf {
-  font-family: fantasy, cursive;
-}
-
-@media (max-width: 768px) {
-  .aaa {
-    text-align: center;
-  }
-}
-
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-row-wrapper {
-  display: flex;
-}
-
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
 input,
 button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -67,23 +20,75 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
-/* Heading */
-h3,
-label[for="new-task"] {
+.button_delete img {
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
+}
+
+.button_delete img:hover {
+  transform: rotateZ(0);
+}
+
+/* heading */
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
   padding: 30px 0 10px;
-  margin: 0;
+  border-bottom: 2px solid #333;
   text-transform: uppercase;
+  display: block;
+  margin: 0 0 20px;
 }
 
-input[type="text"] {
+/* Header */
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+
+.header__image {
+  width: 100%;
+}
+
+.header__link {
+  font-family: fantasy, cursive;
+}
+
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
+  }
+}
+
+.main-wrapper {
+  display: block;
+  width: 500px;
+  margin: 0 auto;
+}
+
+/* new task */
+.new-task-wrapper {
+  display: flex;
+  padding: 20px 0 10px 0;
+}
+
+.new-task-wrapper__input{
+  width: 318px;
+}
+
+.new-task__input,
+.task__input {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,75 +101,57 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
-  color: #333;
-}
-
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-
 #new-task {
   width: 318px;
 }
+/* new task */
 
-/* Task list */
-li {
+/* tasks list */
+.task-list__tasks {
+  margin: 0;
+  padding: 0px;
+}
+
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style: none;
 }
 
-li > * {
-  vertical-align: middle;
+.new-task__input:focus,
+.task__input:focus {
+  color: #333;
 }
 
-li > input[type="checkbox"] {
-  margin: 0 10px;
-}
-
-li > label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+  flex-grow: 1;
 }
 
-li > input[type="text"] {
-  width: 226px;
+.task_checkbox {
+  margin: 0 10px;
 }
 
-.delete img {
-  height: 2em;
-  transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
-}
-
-.delete img:hover {
-  transform: rotateZ(0);
-}
-
-/* Completed */
-#completed-tasks label {
-  text-decoration: line-through;
-  color: #888;
-}
-
-/* Edit Task */
-ul li input[type="text"] {
+/* edit task */
+.task-list__tasks .task__input,
+.task_edit-mode label {
   display: none;
 }
 
-.editMode input[type="text"] {
+.task_edit-mode .task__input {
   display: inline-block;
   width: 224px;
 }
 
-.editMode label {
-  display: none;
+/* completed task */
+#completed label {
+  text-decoration: line-through;
+  color: #888;
 }
